@@ -147,6 +147,7 @@ Views 6.x-3.0-dev
     o #626732 by dereine: Added a test for analyze.
     o #870792 by bojanz, dereine: Test validation features of filter and filter_date handler.
     o #868990: Fix undefined call to $view->set_use_pager()
+    o #976200 by Bevan: [Edit View] links not always clickable.
 
 Views 6.x-3.0-alpha3
     o #705668 by dereine: Fix glossary view, add tests for glossary view.
